# FPS

./: .gitignore  Cargo.toml  README.MD
apps/client/: Cargo.toml
apps/client/src/: main.rs
apps/server/: Cargo.toml
apps/server/src/: main.rs
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/player/: player_shooting.rs
crates/map/: Cargo.toml
crates/map/src/: dummy_world.rs  lib.rs  targets.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs
crates/physics/: Cargo.toml
crates/physics/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: components.rs  config.rs  lib.rs  maps.rs  startup.rs  types.rs
crates/ui/: Cargo.toml
crates/ui/src/: background.rs  friendlist.rs  home_menu.rs  hud.rs  inventory_menu.rs  lib.rs  loading_screen.rs  navbar.rs  options_menu.rs  play_menu.rs  playerbox.rs
docs/: FolderStruct.MD
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
