[workspace]
members = [
    "crates/*",
    "apps/*",
    "tools/xtask",
]

[workspace.dependencies]
bevy = { version = "0.14.2" }
bevy_rapier3d = { version = "0.27.0", features = ["simd-stable"] }
bevy_renet = "2.0.0"
bevy_egui = "0.28"
bevy_asset_loader = "0.23"
bevy_framepace = "0.16"
renet = "1.1.0"
serde = { version = "1", features = ["derive"] }
bincode = "2.0.1"
rand = "0.9.2"
dirs = "6.0.0"