[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
bevy_renet = { workspace = true }
bevy_egui = { workspace = true }
bevy_asset_loader = { workspace = true }
renet = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }

core = { path = "../../crates/core" }
physics = { path = "../../crates/physics" }
ui = { path = "../../crates/ui" }
audio = { path = "../../crates/audio" }
shared = { path = "../../crates/shared" }
map = { path = "../../crates/map" }
